--- a/todo/todo_list/templates/index.html
+++ b/todo/todo_list/templates/index.html
@@ -1,14 +1,34 @@
+{% load static %}
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>ToDoList</title>
+
+	<!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 	<style type="text/css">
 		body{
-			background-color: #34495E;
-			color: white;
-		}
+			 background-color: #34495E; 
+			 background-image:url("{% static 'images/bg7.jpg' %}");
+			 /*background-position: center;*/
+			 background-size: cover; 
+			 color: white;
+		}	
+
+		.hero{
+			background-color: rgba(51,51,51,0.3);
+			top: 0;
+			bottom: 100;
+			position: absolute;
+			min-width: 100%;
+			min-height: 100%;
+		}	
 
 		ul{
 			list-style: none;
@@ -30,33 +50,35 @@
 </head>
 
 <body>
-	<div class="container">
-		<h1 class="text-center display-1">ToDoList</h1>
-		
-		<div class="row">
-
-			<form class= "col-3 mx-auto" action="{% url 'add' %}" method="POST" role="form">
-				{% csrf_token %}
-			  <div class="input-group">
-			    {{form.content}}<span><button type="submit" class="btn btn-primary">Add</button></span>			    
-			  </div>			 		  
-			  
-			</form>
-		</div>
-
-		<div class="row">
+	<div class="hero">
+		<div class="container">
+			<h1 class="text-center display-1">ToDoList</h1>			
 			
-			<ul class="col-7 mx-auto">
+			<div class="row">
 
-				{% for item in all_items %}
-					<li>{{ item.content }} <a href="{% url 'delete' item.id %}" style="float:right;color:red">Delete</u></a></li>
-				{% endfor %}
+				<form class= "col-3 mx-auto" action="{% url 'add' %}" method="POST" role="form">
+					{% csrf_token %}
+				  <div class="input-group">
+				    {{form.content}}<span><button type="submit" class="btn btn-primary">Add</button></span>			    
+				  </div>			 		  
+				  
+				</form>
+			</div>
+
+			<div class="row">
 				
-			</ul>
+				<ul class="col-7 mx-auto">
+
+					{% for item in all_items %}
+						<li>{{ item.content }} <a href="{% url 'delete' item.id %}" style="float:right;color:red">Delete</u></a></li>
+					{% endfor %}
+					
+				</ul>
+
+			</div>
 
 		</div>
 
-	</div>	
-
+	</div>
 </body>
 </html>
